<resources>
    <string name="app_name">IT Company Test</string>
    <string name="name">ФИО:</string>
    <string name="name_hint">Фамилия Имя Отчество</string>
    <string name="age">Возраст:</string>
    <string name="salary">Уровень ЗП:</string>
    <string name="Q1">Сколько типов данных в Java?</string>
    <string name="Q1A1">6</string>
    <string name="Q1A2">7</string>
    <string name="Q1A3">8</string>
    <string name="Q1A4">9</string>
    <string name="Q2">Состояние, при котором Activity находится в фокусе</string>
    <string name="Q2A1">onCreate</string>
    <string name="Q2A2">onResume</string>
    <string name="Q2A3">onStart</string>
    <string name="Q2A4">onPause</string>
    <string name="Q3">Какой разметки не существует в Android?</string>
    <string name="Q3A1">Linear</string>
    <string name="Q3A2">Frame</string>
    <string name="Q3A3">Grid</string>
    <string name="Q3A4">Object</string>
    <string name="Q4">Какого уведомления не существует?</string>
    <string name="Q4A1">System</string>
    <string name="Q4A2">Toast</string>
    <string name="Q4A3">Status Bar</string>
    <string name="Q4A4">Dialogue</string>
    <string name="Q5">Где располагаются Layouts?</string>
    <string name="Q5A1">.java</string>
    <string name="Q5A2">.xml</string>
    <string name="Q5A3">.apk</string>
    <string name="Q5A4">.png</string>
    <string name="age_hint">лет</string>
    <string name="experience">Опыт работы больше 2-х лет</string>
    <string name="skill">Навыки командной разработки</string>
    <string name="trip">Готовность к командировкам</string>
    <string name="submit">Отправить</string>
    <string name="call">call</string>
    <string name="email">email</string>
    <string name="sendEmail">Отправка Email</string>
    <string name="to">Адресат:</string>
    <string name="messageBody">Сообщение:</string>
    <string name="subject">Тема:</string>
    <string name="results">Результаты:</string>
    <string name="sum">Набрано баллов:</string>
</resources>
