<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.watcher.project03.MainActivity">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/name"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="@string/name_hint" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:paddingBottom="16dp"
            android:text="@string/age"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/age2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="2"
            android:hint="@string/age_hint"
            android:paddingBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/salary"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <SeekBar
            android:id="@+id/salary2"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_height="wrap_content"
            android:layout_width="240dp"
            android:layout_column="1"
            android:layout_row="2"
            android:max="20"
            android:layout_gravity="center"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />

        <TextView
            android:id="@+id/salary3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="3"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
<RadioGroup
    android:id="@+id/questions"
    android:layout_columnSpan="2"
    android:layout_width="match_parent"
    android:layout_column="0">
        <TextView
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Q1"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            tools:ignore="MissingPrefix" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q1rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q1A1" />

            <RadioButton
                android:id="@+id/q1rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q1A2" />

            <RadioButton
                android:id="@+id/q1rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q1A3" />

            <RadioButton
                android:id="@+id/q1rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q1A4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Q2"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q2rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q2A1" />

            <RadioButton
                android:id="@+id/q2rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q2A2" />

            <RadioButton
                android:id="@+id/q2rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q2A3" />

            <RadioButton
                android:id="@+id/q2rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q2A4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Q3"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q3rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q3A1" />

            <RadioButton
                android:id="@+id/q3rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q3A2" />

            <RadioButton
                android:id="@+id/q3rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q3A3" />

            <RadioButton
                android:id="@+id/q3rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q3A4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Q4"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q4rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q4A1" />

            <RadioButton
                android:id="@+id/q4rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q4A2" />

            <RadioButton
                android:id="@+id/q4rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q4A3" />

            <RadioButton
                android:id="@+id/q4rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q4A4" />
        </RadioGroup>

        <TextView
            android:id="@+id/q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Q5"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/q5rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q5A1" />

            <RadioButton
                android:id="@+id/q5rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q5A2" />

            <RadioButton
                android:id="@+id/q5rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q5A3" />

            <RadioButton
                android:id="@+id/q5rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Q5A4" />
        </RadioGroup>

    <CheckBox
        android:id="@+id/experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <CheckBox
        android:id="@+id/skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skill"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <CheckBox
        android:id="@+id/trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="validate"
        android:text="@string/submit"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />
</RadioGroup>
    </GridLayout>
</ScrollView>